<resources>
    <string name="fulltext_retrieval">全文搜索</string>
    <string name="share">分享</string>

    <string name="prev_chapter">上一章</string>
    <string name="next_chapter">下一章</string>

    <string name="read_menu_catalogue">目录</string>
    <string name="read_menu_brightness">亮度</string>
    <string name="read_menu_day">日间</string>
    <string name="read_menu_night">夜间</string>
    <string name="read_menu_setting">设置</string>

    <string name="system_brightness">系统亮度</string>

    <string name="text_size_minus">Aa-</string>
    <string name="text_size_plus">Aa+</string>

    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_translation">平移</string>

    <string name="read_search_search_tip">输入关键词，看看TA在哪？</string>
</resources>
