<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/read_dl_slide"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nkcs.ereader.read.ui.widget.ReadView
            android:id="@+id/read_rv_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            tools:visibility="gone" />

        <!-- 蒙版 -->
        <RelativeLayout
            android:id="@+id/read_rl_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="gone" />

        <!-- 顶部菜单 -->
        <RelativeLayout
            android:id="@+id/read_rl_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/read_menu_bg"
            android:padding="5dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/read_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_read_back" />

            <ImageView
                android:id="@+id/read_iv_listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/read_iv_more"
                android:padding="10dp"
                android:src="@drawable/ic_read_earphone" />

            <ImageView
                android:id="@+id/read_iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:src="@drawable/ic_read_more" />

        </RelativeLayout>

        <!-- 底部菜单 -->
        <LinearLayout
            android:id="@+id/read_ll_bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/read_menu_bg"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/read_tv_pre_chapter"
                    style="@style/Read.BottomMenu"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/prev_chapter" />

                <SeekBar
                    android:id="@+id/read_sb_chapter_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:maxHeight="3dp"
                    android:minHeight="3dp"
                    android:progressDrawable="@drawable/seekbar_bg"
                    android:thumb="@drawable/seekbar_thumb"
                    android:thumbOffset="10dp" />

                <TextView
                    android:id="@+id/read_tv_next_chapter"
                    style="@style/Read.BottomMenu"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/next_chapter" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:paddingTop="0dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/read_tv_catalogue"
                    style="@style/Read.BottomMenu.Button"
                    android:drawableTop="@drawable/ic_read_menu_catalogue"
                    android:text="@string/read_menu_catalogue" />

                <TextView
                    android:id="@+id/read_tv_brightness"
                    style="@style/Read.BottomMenu.Button"
                    android:drawableTop="@drawable/ic_read_menu_brightness"
                    android:text="@string/read_menu_brightness" />

                <TextView
                    android:id="@+id/read_tv_mode"
                    style="@style/Read.BottomMenu.Button"
                    android:drawableTop="@drawable/ic_read_menu_night"
                    android:text="@string/read_menu_night" />

                <TextView
                    android:id="@+id/read_tv_setting"
                    style="@style/Read.BottomMenu.Button"
                    android:drawableTop="@drawable/ic_read_menu_setting"
                    android:text="@string/read_menu_setting" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <!-- 侧滑栏 -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/read_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="17sp"
            android:textColor="#444444" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/read_rv_catalogue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
